[package]
name = "short-url-generator"
version = "0.1.0"
authors = ["Jeziel Lago <jeziellago@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.20.1"
rand = "0.8.3"
warp = "0.2"
tokio = { version = "0.2", features = ["macros"] }