[package]
name = "shortener-redirect"
version = "0.1.0"
authors = ["Jeziel Lago <jeziellago@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.20.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
warp = "0.2"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
